[FIX] Modules not working when folder name was changed
[FIX] Jail positions not saving
[FIX] Compatability with extra seats in VUMod
[FIX] animations to work with latest update
[FIX] Staying on fire when respawning after money printer explosion
[FIX] Pressing E on a gun you can't pick up making it pick up on walk over it (hard to explain lol)
[FIX] Saving original steam names in the database
[CHANGE] Microphone GUI layout. It's way more RP'ish now!
[CHANGE] Credits, added Eusion
[CHANGE] The way Entities like money and money printers show their information. Thanks MavBear!
[CHANGE] Made a lot of functions local, this will give you better overall performance both on server and client
[CHANGE] Stunstick damage to prevent abuse. Left click: no damage, right click: 10 damage
[CHANGE] F1 help text
[CHANGE] Made it so you have to press E on dropped weapons to pick them up
[CHANGE] It doesn't remove vehicles anymore when you change job.
[CHANGE] Made lockpicking time random
[CHANGE] Weapon checker to take a while to confiscate weapons
[REMOVE] ALL NWVars in doors, players and custom entities (shipments, druglabs etc.) DarkRP now has LESS NWVars than sandbox!
[REMOVE] VoteCopOn. It's bullshit
[REMOVE] All global integers. Result: Less server crashes, less buffer overflow in net message, faster spawning time
[REMOVE] SendLua's to open keys and F4 menu. I don't even know why I had them there in the first place
[REMOVE] FindPlayerBySID, SID is the player's UserID, Player(SID) does exactly the same thing.
[REMOVE] Unused functions such as rp_paydaytime and FoodHeal
[REMOVE] Bannedprops/allowed props, it has been replaced by FPP.
[REMOVE] CustomTeams and Customshipments.txt, no one used them

DarkRP 2.4.1

[ADD] rp_ironshoot, set if people have to see through the ironsights to shoot
[ADD] Falco's Prop protection (FPP), reporting for duty to replace Simple Prop Protection!
[ADD] Anti tool model crash(FPP feature)
[ADD] An easy way to make normal entities
[ADD] CPPI for FPP